Siarhei_Auhynnik/12.KubernetesDataSecurity/sealed-secrets-service-default.yaml
apiVersion: v1
kind: Service
metadata:
  name: sealed-secrets
  namespace: default
spec:
  selector:
    name: sealed-secrets-controller
  ports:
    - port: 8080
      targetPort: 8080
